After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704951 - avidemux: memory leak
avidemux: memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.1.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-26 19:08 UTC by Matej Knopp
Modified: 2013-07-28 15:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.09 KB, patch)
2013-07-26 19:08 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2013-07-26 19:08:16 UTC
Created attachment 250229 [details] [review]
Patch

avidemux forgets to unmap memory before unrefing the buffer.
Comment 1 Sebastian Dröge (slomo) 2013-07-28 15:34:19 UTC
commit 89a3dc2ecdd6d26e228ad56cba863d37d35127c1
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Sun Jul 28 17:32:27 2013 +0200

    avidemux: Don't forget unmapping and unreffing buffer

commit 19475877840e8eecc0b303cae3ded38fd387caec
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Fri Jul 26 21:06:17 2013 +0200

    avidemux: unmap buffer
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704951