avidemux: unmap buffer

https://bugzilla.gnome.org/show_bug.cgi?id=704951