gst/avi/gstavidemux.c
@@ -3744,6 +3744,7 @@ gst_avi_demux_stream_header_pull (GstAviDemux * avi)
 
         switch (GST_READ_UINT32_LE (map.data)) {
           case GST_RIFF_LIST_strl:
+            gst_buffer_unmap (sub, &map);
             if (!(gst_avi_demux_parse_stream (avi, sub))) {
               GST_ELEMENT_WARNING (avi, STREAM, DEMUX, (NULL),
                   ("failed to parse stream, ignoring"));
@@ -3752,6 +3753,7 @@ gst_avi_demux_stream_header_pull (GstAviDemux * avi)
             sub = NULL;
             goto next;
           case GST_RIFF_LIST_odml:
+            gst_buffer_unmap (sub, &map);
             gst_avi_demux_parse_odml (avi, sub);
             sub = NULL;
             break;
